force-app/main/default/objects/PopcornFeatureExecution__c/PopcornFeatureExecution__c.object-meta.xml
<CustomObject>
    <label>Popcorn Feature Execution</label>
    <nameField>
        <displayFormat>FEXEC#{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Popcorn Feature Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>