force-app/main/default/objects/PopcornFeatureExecution__c/fields/Execution__c.field-meta.xml
<CustomField>
    <fullName>Execution__c</fullName>
    <label>Execution</label>
    <referenceTo>PopcornExecution__c</referenceTo>
    <relationshipName>FeatureExecutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>