force-app/main/default/objects/PopcornFeatureExecution__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature</label>
    <referenceTo>PopcornFeature__c</referenceTo>
    <relationshipName>FeatureExecutions</relationshipName>
    <type>Lookup</type>
</CustomField>