force-app/main/default/objects/PopcornFeatureExecution__c/fields/FeatureExecutionRef__c.field-meta.xml
<CustomField>
    <fullName>FeatureExecutionRef__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Feature Execution Ref</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>